<resources>
    <string name="app_name">Belfort</string>
    <string name="action_settings">Settings</string>
    <string name="accessibility_img">Il s\'agit d\'une image</string>
    <string name="mod_global__sin_conexion_a_internet">Pas de connexion Internet</string>
    <string name="mod_global__no_dispones_de_conexion_a_internet">Pas de connexion Internet disponible. Connectez-vous à Internet et essayez à nouveau.</string>
    <string name="mod_global__cargando">Chargement en cours ...</string>
    <string name="mod_global__buscando_ubicacion_gps">Trouver l\'emplacement ...</string>
    <string name="mod_global__error">Erreur</string>
    <string name="mod_global__ok">OK</string>
    <string name="mod_global__cancelar">Annuler</string>
    <string name="mod_global__cerrar">Fermer</string>
    <string name="mod_global__borrar_filtros">Retirer les filtres</string>
    <string name="mod_global__sin_datos">Pas de données</string>
    <string name="mod_global__sin_contenido">Pas de contenu disponible.</string>
    <string name="mod_global__ver">Voir</string>
    <string name="mod_global__no_se_pueden_recuperar_los_datos_del_servidor">Impossible de récupérer les données depuis le serveur</string>
    <string name="mod_global__capas">Fonds de carte</string>
    <string name="mod_home__iniciar_sesion">Se connecter</string>
    <string name="mod_home__cerrar_sesion">Se déconnecter</string>
    <string name="mod_home__descubrir">Découvrir</string>
    <string name="mod_home__pois">Points d\'intérêt</string>
    <string name="mod_home__rutas">Parcours</string>
    <string name="mod_home__informacion">Information</string>
    <string name="mod_home__jugar">Jouer</string>
    <string name="mod_home__juego_de_pistas">Indices</string>
    <string name="mod_home__photohide">Photohide</string>
    <string name="mod_home__geocaching">Randocaching</string>
    <string name="mod_home__premios">Prix</string>
    <string name="mod_home__pasaporte">Passport</string>
    <string name="mod_config__activar_avisos">Activer Avertissements</string>
    <string name="mod_config__configuracion">Paramètres</string>
    <string name="mod_about__acerca_de">Sur quoi</string>
    <string name="mod_about__texto_acerca_de">Mapping API provided by Esri ArcGIS API for Android. Augmented reality powered by Wikitude SDK.</string>
    <string name="mod_login__iniciar_sesion">Se connecter</string>
    <string name="mod_login__es_necesario_iniciar_sesion">Vous devez être connecté pour accéder à ce service. Souhaitez-vous vous connecter ?</string>
    <string name="mod_login__usuario">Email</string>
    <string name="mod_login__contrasena">Mot de passe</string>
    <string name="mod_login__iniciando_sesion">Connexion à ...</string>
    <string name="mod_login__registro">S\'inscrire</string>
    <string name="mod_login__recuperar_contrasena">mot de passe oublié</string>
    <string name="mod_login__campo_requerido">Champ obligatoire</string>
    <string name="mod_login__contrasena_incorrecta">Mot de passe incorrect</string>
    <string name="mod_login__error_al_iniciar_sesion">Connexion impossible</string>
    <string name="mod_login__no_se_puede_iniciar_sesion">Impossible de se connecter. Votre e-mail et/ou mot de passe est peut-être incorrect</string>
    <string name="mod_login__usuario_bloqueado_o_inactivo">Ce compte n\'est pas encore été activé ou il est bloqué.</string>
    <string name="mod_register__registro">Enregistrement</string>
    <string name="mod_register__datos_de_usuario">Données de connexion</string>
    <string name="mod_register__usuario">Utilisateur</string>
    <string name="mod_register__introduce_usuario">Introduisez votre nom utilisateur</string>
    <string name="mod_register__email">Email</string>
    <string name="mod_register__introduce_email">Introduisez votre e-mail</string>
    <string name="mod_register__contrasena">Mot de passe</string>
    <string name="mod_register__introduce_contrasena">Introduisez votre mot de passe</string>
    <string name="mod_register__repite_contrasena">Confirmer votre mot de passe</string>
    <string name="mod_register__datos_personales">Données personnelles</string>
    <string name="mod_register__nombre">Prénom</string>
    <string name="mod_register__introduce_nombre">Introduisez votre prénom</string>
    <string name="mod_register__apellidos">Nom</string>
    <string name="mod_register__introduce_apellidos">Introduisez votre nom</string>
    <string name="mod_register__pais">Pays</string>
    <string name="mod_register__ccaa">Département</string>
    <string name="mod_register__cancelar">Annuler</string>
    <string name="mod_register__deseas_crear_tu_cuenta">Vous voulez créer votre compte ?</string>
    <string name="mod_register__crear_cuenta">créer un compte</string>
    <string name="mod_register__campos_vacios">Les champs vides</string>
    <string name="mod_register__por_favor_rellena_el_campo_usuario">Merci de remplir le champ nom utilisateur</string>
    <string name="mod_register__por_favor_rellena_el_campo_email">Merci de remplir le champ e-mail</string>
    <string name="mod_register__campo_email">Champ email</string>
    <string name="mod_register__campo_email_no_valido">Le champ e-mail ne contient pas d\'adresse valide. Merci de renseigner une adresse valide.</string>
    <string name="mod_register__por_favor_rellena_el_campo_contrasena">Merci de renseigner un mot de passe</string>
    <string name="mod_register__por_favor_rellena_el_campo_repite_contrasena">Merci de confirmer votre mot de passe</string>
    <string name="mod_register__contrasenas">Les mots de passe</string>
    <string name="mod_register__las_contrasenas_no_coinciden">Les mots de passe saisis ne correspondent pas. Merci d\'essayer à nouveau.</string>
    <string name="mod_register__debes_seleccionar_un_pais_para_registrarte">Merci de sélectionner un pays</string>
    <string name="mod_register__comunidad_autonoma">Département</string>
    <string name="mod_register__debes_seleccionar_una_ccaa_para_registrarte">Merci de sélectionner un département</string>
    <string name="mod_register__entrando">Entrer...</string>
    <string name="mod_register__error_al_registrar">Inscription impossible</string>
    <string name="mod_register__nombre_usuario_email_ya_existen">Ce nom d\'utilisateur et cet email existent déjà</string>
    <string name="mod_register__nombre_usuario_ya_existe">Ce nom d\'utilisateur existe déjà</string>
    <string name="mod_register__email_ya_existe">Cet email existe déjà</string>
    <string name="mod_recover_pass__recuperar_contrasena">Mot de passe oublié</string>
    <string name="mod_recover_pass__al_pulsar_enviar_te_enviaremos_codigo">Indiquez l\’e-mail avec lequel vous vous êtes inscrit.</string>
    <string name="mod_recover_pass__correo_electronico">Email</string>
    <string name="mod_recover_pass__enviar">Envoyer</string>
    <string name="mod_recover_pass__campos_vacios">Champs vides</string>
    <string name="mod_recover_pass__por_favor_rellena_el_campo_correo_electronico">Merci de remplir le champ Email</string>
    <string name="mod_recover_pass__campo_correo_electronico">Email</string>
    <string name="mod_recover_pass__el_campo_correo_electronico_no_contiene_direccion_valida">Le champ \'email\' ne contient pas une adresse email valide. Merci d\'entrer un email valide</string>
    <string name="mod_recover_pass__error_al_recuperar_contrasena">Impossible de récupérer le mot de passe</string>
    <string name="mod_recover_pass__el_correo_no_existe">Adresse e-mail inconnue</string>
    <string name="mod_recover_pass__ocurrido_problema_al_recuperar_contrasena_en_el_servidor">Un problème est survenu sur le serveur pour récupérer votre mot de passe. Merci de réessayer plus tard</string>
    <string name="mod_recover_pass__error_al_enviar_tu_email">Échec de l\'envoi de votre e-mail. Essayer à nouveau.</string>
    <string name="mod_recover_pass__en_breves_momentos_recibiras_un_correo_con_codigo">Dans quelques instants, vous recevrez un e-mail avec un code que vous devez saisir dans le champ ci-dessous</string>
    <string name="mod_recover_pass__introduce_codigo">Entrez le code</string>
    <string name="mod_recover_pass__introduce_nueva_contrasena">Entrez nouveau mot de passe</string>
    <string name="mod_recover_pass__repite_nueva_contrasena">Répéter nouveau mot de passe</string>
    <string name="mod_recover_pass__reestablecer_contrasena">Réinitialiser le mot de passe</string>
    <string name="mod_recover_pass__enviando">Chargement en cours...</string>
    <string name="mod_recover_pass__por_favor_introduce_codigo_enviado">S\'il vous plaît entrer le code que nous vous avons envoyé par e-mail</string>
    <string name="mod_recover_pass__codigo_erroneo">Mauvais code</string>
    <string name="mod_recover_pass__por_favor_introduce_un_codigo_valido">S\'il vous plaît entrer un code valide</string>
    <string name="mod_recover_pass__por_favor_introduce_una_contrasena">S\'il vous plaît entrer un mot de passe</string>
    <string name="mod_recover_pass__por_favor_repite_la_contrasena">S\'il vous plaît répéter le mot de passe</string>
    <string name="mod_recover_pass__contrasenas">Les mots de passe</string>
    <string name="mod_recover_pass__las_contrasenas_que_has_introducido_no_coinciden">Les mots de passe saisis ne correspondent pas. Merci d\'essayer à nouveau.</string>
    <string name="mod_recover_pass__contrasena_cambiada_con_exito">Mot de passe modifié avec succès ! Maintenant, vous pouvez vous identifier</string>
    <string name="mod_recover_pass__error_al_reestablecer_contrasena">Échec de réinitialisation de votre mot de passe</string>
    <string name="mod_discover__appli_carte">Une application de cartes doit être installé sur votre appareil pour utiliser cette fonction</string>
    <string name="mod_discover__pois_cercanos">Points d\'intérêt à proximité</string>
    <string name="mod_discover__courtaus_cercanos">Courtaous cercanos</string>
    <string name="mod_discover__buscar_pois">Recherche pois ...</string>
    <string name="mod_discover__buscar_rutas">Recherche de parcours...</string>
    <string name="mod_discover__buscar">Rechercher</string>
    <string name="mod_discover__todas_las_categorias">Tous</string>
    <string name="mod_discover__courtaou">Courtaou</string>
    <string name="mod_discover__selecciona_categoria">Choisissez la catégorie</string>
    <string name="mod_discover__rutas">Parcours</string>
    <string name="mod_discover__mapa">Carte</string>
    <string name="mod_discover__listado">Liste</string>
    <string name="mod_discover__camara">RA</string>
    <string name="mod_discover__checkin">Commentaire</string>
    <string name="mod_discover__valorar">Noter</string>
    <string name="mod_discover__compartir">Partager</string>
    <string name="mod_discover__eventos">Événements</string>
    <string name="mod_discover__ver_en_mapa">Voir sur la carte</string>
    <string name="mod_discover__distancia">DISTANCE :</string>
    <string name="mod_discover__desnivel">DÉNIVELÉ :</string>
    <string name="mod_discover__duracion">DURÉE :</string>
    <string name="mod_discover__valoracion">NOTE :</string>
    <string name="mod_discover__dificultad">DIFFICULTÉ :</string>
    <string name="mod_discover__nota">Avis :</string>
    <string name="mod_discover__telecargar_ruta">Télécharger route et carte&#8230;</string>
    <string name="mod_discover__telecargar_poi">Télécharger point d\'intérêt&#8230;</string>
    <string name="mod_discover__telecarga_completada_titulo">Téléchargement effectué</string>
    <string name="mod_discover__telecarga_completada_info">Le téléchargement est terminé</string>
    <string name="mod_options__descargar">Télécharger</string>
    <string name="mod_options__identificacion">Connexion</string>
    <string name="mod_options__info">À propos</string>
    <string name="mod_options__notificacion_pois">Notification de points d\'intérêt</string>
</resources>