<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:alborgis="http://schemas.android.com/apk/lib/eu.randomobile.pnrlorraine.mod_imgmapping"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_search" >

    <eu.randomobile.pnrlorraine.mod_imgmapping.ImageMap
        android:id="@+id/map_menuOpciones"
        android:layout_width="fill_parent"
        android:layout_height="110dp"
        alborgis:fitImageToScreen="false"
        alborgis:map="menu_Opciones"
        alborgis:maxSizeFactor="1.5"
        alborgis:scaleFromOriginal="true" />

    <CheckBox
        android:id="@+id/check_login_status_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/map_menuOpciones"
        android:checked="false"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textSize="18sp"
        android:text="@string/mod_options__notificacion_pois"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_identificacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/check_login_status_message"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:padding="15dp"
        android:text="@string/mod_options__identificacion"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_identificacion"
        android:padding="15dp"
        android:text="@string/mod_options__descargar"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="gone"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/txt_download"
        android:padding="15dp"
        android:text="@string/mod_options__info"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/border"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="100" >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/white" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="96"
            android:background="@color/white"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/white" />
    </LinearLayout>
	<RelativeLayout 
	android:id="@+id/panelCargando"    
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:visibility="gone"  >

       <ProgressBar
           android:id="@+id/progressBarCargando"
           style="?android:attr/progressBarStyleLarge"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerInParent="true" />
    
   </RelativeLayout>
</RelativeLayout>